tests/ui/const-generics/mgca/assoc-const-without-type_const.stderr
error: use of `const` in the type system not defined as `type const`
  --> $DIR/assoc-const-without-type_const.rs:8:35
   |
LL | fn mk_array<T: Tr>(_x: T) -> [(); T::SIZE] {
   |                                   ^^^^^^^
   |
help: add `type` before `const` for `Tr::SIZE`
   |
LL |     type const SIZE: usize;
   |     ++++

error: use of `const` in the type system not defined as `type const`
  --> $DIR/assoc-const-without-type_const.rs:10:10
   |
LL |     [(); T::SIZE]
   |          ^^^^^^^
   |
help: add `type` before `const` for `Tr::SIZE`
   |
LL |     type const SIZE: usize;
   |     ++++

error: aborting due to 2 previous errors

